# maths_cpp

./: .gitignore  CMakeLists.txt  README.md  biginteger.cpp  biginteger.h  main.cpp  syracuse_test_cycle.cpp  syracuse_test_cycle.h  syracuse_test_numbers.cpp  syracuse_test_numbers_mod_k.cpp  syracuse_test_numbers_mod_k_v2.cpp  test_syracuse.vcxproj
test_Mersenne_primes/: CMakeLists.txt  test_Mersenne_primes.cpp
test_bounding_poly/: CMakeLists.txt  test_bounding_poly.cpp
test_butterworth/: CMakeLists.txt  test_butterworth.cpp
test_cordic/: CMakeLists.txt  test_cordic_alternate.cpp  test_cordic_full.cpp  test_cordic_tan.cpp
test_cpp17/: CMakeLists.txt  ThreadPool.h  test_filesystem.cpp  test_parallel_ThreadPool.cpp  test_parallel_foreach.cpp  test_parallel_thread.cpp
test_dtw/: test_dtw.cpp
test_dtw/test_dtw/: CMakeLists.txt
test_engine3d/: CMakeLists.txt  Engine3D.cpp  Engine3D.h  Image.h  ImageIoBmp.cpp  ImageIoBmp.h  old_bin.7z  test_Engine3D.cpp  test_bmp.cpp
test_gaussian_noise/: CMakeLists.txt  test_gaussian_noise.cpp
test_gaussian_noise_computation/: CMakeLists.txt
test_pascal_triangle/: CMakeLists.txt  test_pascal_triangle.cpp
test_pi/: CMakeLists.txt  test_pi.cpp
test_polygon_area/: CMakeLists.txt
test_polygone_area/: CMakeLists.txt  test_polygone_area.cpp
test_small_floats/: CMakeLists.txt  SmallFloats.h  test_small_floats.cpp
test_sqrt/: CMakeLists.txt  test_sqrt.cpp
test_syracuse/: CMakeLists.txt  biginteger.cpp  main.cpp  main_test_cycle.cpp  main_test_numbers.cpp  main_test_numbers_mod_k.cpp  syracuse_test_cycle.cpp  syracuse_test_numbers.cpp  syracuse_test_numbers.h  syracuse_test_numbers_mod_k.cpp  syracuse_test_numbers_mod_k.h  syracuse_test_numbers_mod_k_v2.h  test_syracuse.sln  test_syracuse.vcxproj
test_wavelets/: CMakeLists.txt  Image.h  ImageIoBmp.cpp  ImageIoBmp.h  Wavelets.cpp  Wavelets.h  test_wavelets.cpp
test_wavelets/doc/: ondelet.htm  projet_ondelettes.doc
