cmake_minimum_required(VERSION 3.20.0)
project (math_cpp)

add_subdirectory(test_butterworth)
add_subdirectory(test_cordic)
add_subdirectory(test_cpp17)
add_subdirectory(test_dtw)
add_subdirectory(test_gaussian_noise)
add_subdirectory(test_Mersenne_primes)
add_subdirectory(test_pi)
add_subdirectory(test_polygon_area)
add_subdirectory(test_small_floats)
add_subdirectory(test_sqrt)
add_subdirectory(test_syracuse)
add_subdirectory(test_wavelets)








