cmake_minimum_required(VERSION 2.8.9)

project (test_cordic_alternate)
add_executable(test_cordic_alternate test_cordic_alternate.cpp)

project (test_cordic_full)
add_executable(test_cordic_full test_cordic_full.cpp)

project (test_cordic_tan)
add_executable(test_cordic_tan test_cordic_tan.cpp)